# ci-fuzz-cli-tutorials

./: README.md
c_cpp/bazel/src/: explore_me.cpp
c_cpp/cmake/: CMakeLists.txt
example-projects/advanced-setup/bazel/: .bazelrc  .gitignore  README.md  WORKSPACE  cifuzz.yaml
example-projects/advanced-setup/bazel/fuzztests/: BUILD.bazel  test_me_fuzz_test.cpp
example-projects/advanced-setup/bazel/lib/src/: BUILD.bazel  test_me.cpp  test_me.h
example-projects/advanced-setup/bazel/main/src/: BUILD.bazel  explore_me.cpp  explore_me.h  main.cpp
example-projects/advanced-setup/bazel/main/tests/: BUILD.bazel  explore_me_fuzz_test.cpp
example-projects/advanced-setup/cmake/: .gitignore  CMakeLists.txt  README.md
example-projects/advanced-setup/cmake/fuzztests/: test_me_fuzztest.cpp
example-projects/advanced-setup/cmake/lib/: CMakeLists.txt
example-projects/advanced-setup/cmake/main/src/: CMakeLists.txt  main.cpp
example-projects/advanced-setup/cmake/main/tests/: CMakeLists.txt  explore_me_fuzztest.cpp
example-projects/advanced-setup/gradle/: README.md  settings.gradle.kts
example-projects/advanced-setup/gradle/app/: build.gradle.kts  cifuzz.yaml
example-projects/advanced-setup/gradle/testsuite/: build.gradle.kts  cifuzz.yaml
example-projects/advanced-setup/maven/: .gitignore  README.md  pom.xml
example-projects/advanced-setup/maven/app/: pom.xml
example-projects/advanced-setup/maven/app/src/main/java/app/: App.java
example-projects/advanced-setup/maven/tests/: cifuzz.yaml  pom.xml
example-projects/advanced-setup/maven/tests/fuzzTests/: NegativeArraySizeFuzzTest.java  UtilFuzzTest.java
example-projects/advanced-setup/maven/util/: pom.xml
example-projects/advanced-setup/maven/util/src/main/java/util/: NegativeArraySize.java  Util.java
example-projects/advanced-setup/maven/util/src/test/java/util/: UtilTest.java
example-projects/advanced-setup/other/: .gitignore  Makefile  README.md  cifuzz.yaml
example-projects/advanced-setup/other/lib/: test_me.cpp  test_me.h
example-projects/advanced-setup/other/main/src/: explore_me.cpp
example-projects/simple-setup/bazel/: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
example-projects/simple-setup/bazel/src/: BUILD.bazel  explore_me_fuzz_test.cpp
example-projects/simple-setup/cmake/: CMakeLists.txt  README.md  my_fuzz_test.cpp
example-projects/simple-setup/cmake/src/: CMakeLists.txt
example-projects/simple-setup/gradle/: .gitignore  README.md  build.gradle
example-projects/simple-setup/gradle-junit-4-and-5/: .gitignore  README.md  build.gradle  cifuzz.yaml  settings.gradle
example-projects/simple-setup/gradle-junit-4-and-5/src/main/java/com/example/: ExploreMe.java
example-projects/simple-setup/gradle-junit-4-and-5/src/test/java/com/example/: ExploreFuzzTest.java  JUnit5Test.java
example-projects/simple-setup/gradle-kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
example-projects/simple-setup/gradle-kotlin/src/main/kotlin/com/example/: ExploreMe.kt  Main.kt
example-projects/simple-setup/gradle-kotlin/src/test/kotlin/com/example/: FuzzTestCase.kt
example-projects/simple-setup/gradle/src/main/java/com/example/: App.java  ExploreMe.java
example-projects/simple-setup/gradle/src/test/java/com/example/: FuzzTestCase.java
example-projects/simple-setup/maven/: .gitignore  README.md  cifuzz.yaml  pom.xml
example-projects/simple-setup/maven-junit-4-and-5/: README.md  cifuzz.yaml  pom.xml
example-projects/simple-setup/maven-junit-4-and-5/src/main/java/com/example/: App.java  ExploreMe.java
example-projects/simple-setup/maven-junit-4-and-5/src/test/java/com/example/: ExploreFuzzTest.java  JUnit4Test.java  Junit5Test.java
example-projects/simple-setup/maven/src/main/java/com/example/: ExploreMe.java
example-projects/simple-setup/maven/src/test/java/com/example/: FuzzTestCase.java
example-projects/simple-setup/nodejs/: .gitignore  ExploreMe.js  FuzzTestCase.fuzz.js  README.md  jest.config.js  package-lock.json  package.json
example-projects/simple-setup/nodejs-typescript/: .gitignore  .npmrc  ExploreMe.ts  FuzzTestCase.fuzz.ts  README.md  cifuzz.yaml  globals.d.ts  jest.config.ts  package-lock.json  package.json
example-projects/simple-setup/other/: .gitignore  Makefile  README.md  cifuzz.yaml
java/gradle/: build.gradle
java/gradle/src/main/java/com/example/: ExploreMe.java
java/maven/: pom.xml
java/maven/src/main/java/com/example/: App.java
js_ts/nodejs-js/: README.md  index.js  package.json  utils.js
js_ts/nodejs-ts/: README.md  index.ts  package.json  utils.ts
tutorials/c_cpp/bazel/: BUILD.bazel
tutorials/c_cpp/bazel/src/: BUILD.bazel  explore_me.cpp
tutorials/c_cpp/cmake/: CMakeLists.txt
tutorials/c_cpp/cmake/src/: explore_me.cpp
tutorials/java/gradle/: build.gradle
tutorials/java/maven/: pom.xml
tutorials/js_ts/nodejs-js/: README.md  package.json
(+8 files in other folders)
