load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_fuzz_test(
    name = "explore_me_fuzz_test",
    srcs = [
        "explore_me_fuzz_test.cpp",
    ],
    corpus = glob(
        ["explore_me_fuzz_test_inputs/**"],
        allow_empty = True,
    ),
    deps = [
        "//main/src:explore_me",
        "@cifuzz",
    ],
)